Make bombsite labels more clearly visible, fix sorting

--- a/Code/UI/HUD/Minimap/Minimap.razor.scss
+++ b/Code/UI/HUD/Minimap/Minimap.razor.scss
@@ -138,7 +138,7 @@ Minimap
     .label
     {
         position: absolute;
-        z-index: 999;
+        z-index: 10;
         transform: translateX(-50%) translateY(-50%);
     }
 }
